# marvin_assistant

./: .env.example  docker-compose.yaml  main.py  pyproject.toml  readme.md  tasks.py
.docker/frontend/: Dockerfile  start
.docker/postgres/: Dockerfile
.docker/services/chat_api/: Dockerfile  start
.docker/services/llm_api/: Dockerfile  start
assistants/: events.py  voice_assistant.py
audio/: abstract_recorders.py  audio_to_text.py  basics.py  m4a_loaders.py  m4a_recorders.py  mp3_recorders.py  players.py  wave_recorders.py
backend/services/chat_api/: apis.py  app.py  conversations.py  services.py
backend/services/llm_api/: app.py  services.py
backend/services/whatsapp_api/: app.py  config.py  security.py
backend/services/whatsapp_api/.ngrok/: example.ngrok-config.yml
backend/services/whatsapp_api/notebooks/: 01_setup.ipynb
backend/services/whatsapp_api/utils/: abstracts.py  clients.py  config.py  handlers.py  processors.py
chats/: basic_ui.py
frontend/: main.py
frontend/assistants/: voice_assistant.py
frontend/audio/: abstract_recorders.py  basics.py  m4a_loaders.py  m4a_recorders.py  mp3_recorders.py  wave_recorders.py
frontend/chats/: basic_ui.py
frontend/services/: chat_api.py
frontend/tts/eleven_labs/: apis.py  producers.py  settings.py
tts/eleven_labs/: apis.py  producers.py
